# utf8-validator-benchmarks

./: .gitmodules  Cargo.toml
simdjson-utf8-validators/: Cargo.toml  build.rs
utf8-validator-benchmarks/: Cargo.toml  data
utf8-validator-benchmarks/benches/: criterion_bench.rs
